--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ nalgebra = { version = "0.29", features = ["rand"] }
 approx = "0.5.0"
 num-traits = "0.2.14"
 lazy_static = "1.4.0"
+serde = { version = "1.0.193", features = ["derive"] }
 
 [dev-dependencies]
 criterion = "0.3.3"
